[package]
name = "birdflop-tunnel"
version = "0.2.0"
authors = ["Birdflop"]
license = "MIT"
description = "Self-hosted Minecraft tunnel that gives each user a stable *.tunnel.birdflop.com subdomain and routes traffic by the Minecraft handshake. Based on bore by Eric Zhang."
repository = "https://github.com/birdflop/tunnel"
keywords = ["network", "cli", "tunnel", "tcp", "minecraft"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[lib]
name = "birdflop_tunnel"
path = "src/lib.rs"

[[bin]]
name = "bftunnel"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
dashmap = "5.2.0"
fastrand = "1.9.0"
futures-util = { version = "0.3.21", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-util", "macros", "net", "time", "sync"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.18"
uuid = { version = "1.2.1", features = ["serde", "v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.15.0"
tokio = { version = "1.17.0", features = ["sync"] }
